--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
   </head>
   <body class="background-main">
 
-<div class="container ">
   <header class=" lh-1 py-3">
     <div class="row flex-nowrap justify-content-between align-items-center">
       <div class="col-4 text-left">
@@ -34,16 +33,14 @@
     </div>
   </header>
 
-  <div class="nav-scroller py-1 mb-3 block-bg rounded">
-    <nav class="nav nav-underline justify-content-between">
+  <div class="sticky-top container py-1 mb-3 block-bg rounded">
+    <nav class="nav nav-underline justify-content-between" >
       <a class="nav-item nav-link " href="#experience">Expérience</a>
       <a class="nav-item nav-link " href="#competence">Compétences</a>
       <a class="nav-item nav-link " href="#contact">Contacts</a>
-      <a class="nav-item nav-link " href="broken.html">Casser le site</a>
-      <a class="sticky-top nav-item nav-link link-body-emphasis active" href="#"><i class="fa-solid fa-circle-up"></i></a>
+      <a class=" nav-item nav-link link-body-emphasis active" href="#"><i class="fa-solid fa-circle-up"></i></a>
     </nav>
   </div>
-</div>
 
 <main class="container block-bg  p-4 rounded">
   <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis block-bg">
