--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
   </header>
 
-  <div class="sticky-top container py-1 mb-3 block-bg rounded">
+  <div class="sticky-top container py-1 mb-3 block-bg rounded main-menu">
     <nav class="nav nav-underline justify-content-between" >
       <a class="nav-item nav-link " href="#experience">Expérience</a>
       <a class="nav-item nav-link " href="#competence">Compétences</a>
