--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
   <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis block-bg">
     <div class="col-lg-6 px-0">
       <h1 class="display-4">Julien PABLO</h1>
+      <div class="animation-box">
       <p id="animatedText"></p>
+      </div>
       <p class="lead mb-0"><a id="experience" href="#experience" class="text-body-emphasis fw-bold">Voir mon expérience</a></p>
     </div>
   </div>
