--- a/index.html
+++ b/index.html
@@ -33,13 +33,15 @@
     </div>
   </header>
 
-  <div class="sticky-top container py-1 mb-3 block-bg rounded main-menu">
+  <div class="sticky-top pt-2">
+  <div class=" container py-1 mb-3 block-bg rounded main-menu">
     <nav class="nav nav-underline justify-content-between" >
       <a class="nav-item nav-link " href="#experience">Expérience</a>
       <a class="nav-item nav-link " href="#competence">Compétences</a>
       <a class="nav-item nav-link " href="#contact">Contacts</a>
       <a class=" nav-item nav-link link-body-emphasis active" href="#"><i class="fa-solid fa-circle-up"></i></a>
     </nav>
+  </div>
   </div>
 
 <main class="container block-bg  p-4 rounded">
