--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
   <header class="sticky-top p-2">
-  <div class=" container py-1 mb-2 block-bg rounded main-menu">
+  <div class=" container py-1 mb-3 block-bg rounded main-menu">
     <nav class="nav nav-underline justify-content-between" >
       <a class="nav-item nav-link " href="#experience"><i class="fa-solid fa-briefcase"></i> Expérience</a>
       <a class="nav-item nav-link " href="#competence"><i class="fa-solid fa-user-gear"></i> Compétences</a>
@@ -46,7 +46,7 @@
       </div>
       <p><b>À propos :</b> Passionné d'informatique, je suis constamment en quête de nouveaux défis et d'acquisition de nouvelles compétences. Fort d'une solide expérience en administration système, je souhaite désormais évoluer vers un poste de développeur afin de disposer d’une vision à 360° du monde informatique.</p>
 
-      <div class="lead mb-0" "><a id="experience" href="#experience" class="text-body-emphasis fw-bold">Voir mon expérience</a></div>
+      <div class="lead mb-0"><a id="experience" href="#experience" class="text-body-emphasis fw-bold">Voir mon expérience</a></div>
     </div>
   </div>
 
