--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h2 class="border-top mt-2">Expérience professionnelle :</h2>
         <!--experience 1 -->
         <h3>Technicien d'exploitation</h3>
-        <p class="blog-post-meta"><a href="https://www.seatpi.com/" target="_blank">SEA TPI</a> - Montpellier, France, 2022 - 2024 / 2021  </p>
+        <p class="blog-post-meta"><a href="https://www.seatpi.com/" target="_blank">SEA TPI</a> · Montpellier, France, 2022 - 2024 / 2021  </p>
         <p><b>Compétences :</b> Administration système Linux · Administration de bases de données · VMware vCenter · Script bash · Jenkins · Produits Docker · SQL · ServiceNow · Centreon · IBM TWS</p>
         <ul>
           <li>Résolution d’incidents techniques sur des machines Linux, AIX et Windows en respect des SLA imposés par le client.</li>
@@ -74,7 +74,7 @@
 
         <!--experience 2 -->
         <h3>Service civique Européen (Développement PHP)</h3>
-        <p class="blog-post-meta"><a href="https://balkanhotspot.org/" target="_blank">BALKAN HOTSPOT</a> -  Thessalonique, Grèce , 2022</p>
+        <p class="blog-post-meta"><a href="https://balkanhotspot.org/" target="_blank">BALKAN HOTSPOT</a> · Thessalonique, Grèce , 2022</p>
         <p><b>Compétences :</b> HTML/CSS · PHP · Conception pour WordPress · Rédaction SEO · Anglais</p>
         <ul>
           <li>Mise à jour d'un Plugin PHP de gestion de polices</li>
@@ -85,7 +85,7 @@
 
         <!--experience 3 -->
         <h3>Intégrateur Web</h3>
-        <p class="blog-post-meta"><a href="#nomorewebsite" id="nomorewebsite">EP-SERVICES</a> - Cournonsec, 2020</p>
+        <p class="blog-post-meta"><a href="#nomorewebsite" id="nomorewebsite">EP-SERVICES</a> · Cournonsec, 2020</p>
         <p><b>Compétences :</b> HTML/CSS · PHP · WordPress · Adobe Creative Suite</p>
         <ul>
           <li>Développement d'un site web responsive, adapté à divers dispositifs et tailles d'écran.</li>
@@ -95,7 +95,7 @@
 
         <!--experience 4 -->
         <h3>Intégrateur Web</h3>
-        <p class="blog-post-meta"><a href="https://pointcourse.com/" target="_blank">ATS SPORT</a> (Prestation pour Inetum), Montpellier, France, 2022 - 2024 / 2021
+        <p class="blog-post-meta"><a href="https://pointcourse.com/" target="_blank">ATS SPORT</a> · Pignan, France, 2019
         <p><b>Compétences :</b>HTML/CSS · PrestaShop · Infographie</p>
         <ul>
           <li>Intégration sous PrestaShop : Personnalisation de thèmes et modules pour répondre aux besoins spécifiques des entreprises, tout en assurant la compatibilité avec les dernières versions de PrestaShop.</li>
@@ -206,7 +206,7 @@
       </div>
     </div>
   </div>
-  <div class="mb-2 block-bg rounded p-4" id="contact">
+  <div hidden class="mb-2 block-bg rounded p-4" id="contact">
     <h2 >Contact</h2>
   <div class="mb-3">
     <label for="exampleFormControlInput1" class="form-label">E-Mail :</label>
@@ -227,14 +227,9 @@
   </div>
 
 </main>
-<footer class="py-5 text-center text-body-secondary bg-body-tertiary">
-
-  <p>Site Web réalisé à l'aide de  <a href="https://getbootstrap.com/">Bootstrap</a> par <a target="_blank" href="https://www.linkedin.com/in/julien-pablo">Julien PABLO</a>.</p>
-
-  <p class="mb-0">
-    <a href="#">Retour à l'accueil</a>
-  </p>
-</footer>
+  <footer class="text-center pt-3 pb-3">
+    <p>Créé par Julien PABLO · <a href="https://github.com/julienpablo" target="_blank"><i class="fab fa-github"></i> GitHub</a> · Tous droits réservés</p>
+  </footer>
 <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 <script src="assets/textAnimation/textAnimation.js"></script>
